fix console bug

--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -106,7 +106,7 @@ html.fp-enabled,
     position: fixed;
     z-index: 100;
     margin-top: -32px;
-    top: 46%;
+    top: 46% !important;
     opacity: 1;
     -webkit-transform: translate3d(0,0,0);
 }
