--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 	color: rgb(56, 56, 56);
 	/* background-color: rgba(228, 224, 215, 0.7) !important; */
 	/* background: url(../images/bg4.jpg) repeat-y; */
-	background-color: #f9f5f1;
+	background-color: #fff;
 	background-blend-mode: color;
 	background-size: cover;
 }
